# vae

./: .gitignore  README.md  launch_ms_sweep.sh  pyproject.toml  requirements.txt  train_cifar10.sh  train_cifar10_ms.sh  train_cifar10_ms_sweep.sh  train_cifar10_simclr.sh  train_vqvae.sh
src/model/: architectures.py  components.py
src/notebooks/: conv.ipynb
src/test/: test_architectures.py  test_components.py
src/train/: train_vqvae.py
vae/data/: __init__.py  datasets.py
vae/model/: architectures.py  metrics.py  probes.py  vqvae.py
vae/notebooks/: code_usage.ipynb  mean_shift.ipynb  simclr_loss.ipynb  simclr_metrics.ipynb  vqvae_.ipynb  vqvae_encoding.ipynb
vae/test/: test_aim.py  test_architectures.py  test_loader.py  test_vqvae_checkpoint.py  test_vqvae_enc_dec.py
vae/train/: fid.py  flax_inception.py  train_simclr_vqvae.py  train_vqvae.py  train_vqvae_ms.py
vae/utils/: conv.py
