[project]
name = "vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "equinox>=0.13.1",
    "jax>=0.7.2",
    "jaxtyping>=0.3.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "optax>=0.2.6",
    "pytest>=8.4.2",
    "torchvision>=0.23.0",
]
