[project]
name = "vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aim>=3.29.1",
    "equinox>=0.13.1",
    "fid>=0.2.1",
    "flax>=0.12.0",
    "jax>=0.7.2",
    "jaxtyping>=0.3.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "optax>=0.2.6",
    "pytest>=8.4.2",
    "tensorflow>=2.20.0",
    "torchvision>=0.23.0",
]
